--- a/style/stile.css
+++ b/style/stile.css
@@ -26,22 +26,30 @@ div.wrapper img{
     height:100%;
     object-fit: cover;
     object-position: center;
+    
+}
+img.active{
+    display: inline-block;
+}
+img.hidden{
+    display: none;
 }
 button{
     position: absolute;
     display: inline-block;
     border-radius: 50%;
     border:none;
-    top:50%;
     width: 50px;
     height: 50px;
-    transform: translateY(-50%);
+    transform: translateX(-50%);
 }
 button.before{
-    left:0;
+    top:0;
+    left:50%;
 }
 button.after{
-    right:0;
+    bottom: 0;
+    left:50%;
 }
 
 .fa-solid{
