--- a/style/stile.css
+++ b/style/stile.css
@@ -1,57 +1,67 @@
 
-main{
+
+h1 > header{
+    margin-bottom: 4rem;
+}
+
+.d-flex{
     display: flex;
     justify-content: center;
-    align-items: center;
 }
-
-.my_height-width{
-    height: 100vh;
-    width: 100%;
-}
-
-.my_wrapper-wh{
+.container{
+    height:500px;
     width: 80%;
-    height: 600px;
+    margin:0 auto;
+    position:relative
+    
 }
 
-div.wrapper{
-    position: relative;
-}
 
-
-
-div.wrapper img{
+img{
+    height: 100%;
     width: 100%;
-    height:100%;
     object-fit: cover;
     object-position: center;
     
 }
-img.active{
-    display: inline-block;
+
+
+
+.text-container{
+    
+    position: absolute;
+    bottom:0;
+    right:0;
+    padding:0 3rem;
 }
-img.hidden{
+iv.my-carousel-item{
     display: none;
 }
+div.my-carousel-item.active{
+    display: block;
+}
+div.my-carousel-item{
+    height: 100%;
+    position: relative;
+    display: none;
+}
+
 button{
     position: absolute;
-    display: inline-block;
-    border-radius: 50%;
+    right: 50%;
+    transform: translateX(50%);
     border:none;
-    width: 50px;
-    height: 50px;
-    transform: translateX(-50%);
+    border-radius:50%;
+    padding:.5rem
 }
-button.before{
-    top:0;
-    left:50%;
+
+.button-before{
+    top:0
 }
-button.after{
-    bottom: 0;
-    left:50%;
+.button-after{
+    bottom:0
 }
 
 .fa-solid{
-    font-size:1.5rem
+    font-size: 1.5rem;
 }
