--- a/style/stile.css
+++ b/style/stile.css
@@ -15,7 +15,9 @@ h1 > header{
     position:relative
     
 }
-
+h1,p{
+    color:white
+}
 
 img{
     height: 100%;
@@ -50,7 +52,9 @@ button{
     transform: translateX(50%);
     border:none;
     border-radius:50%;
-    padding:.5rem
+    padding:.5rem;
+    background-color: transparent;
+    z-index: 1;
 }
 
 .button-before{
@@ -62,4 +66,6 @@ button{
 
 .fa-solid{
     font-size: 1.5rem;
+    color:white
+
 }
